[package]
name = "zkv-para-evm-client-evm-tracing"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "GPL-3.0-only"


[dependencies]
ethereum-types = {workspace = true, features = ["std"]}
hex = {workspace = true, features = ["serde"]}
serde = {workspace = true, features = ["derive", "std"]}

# Local
evm-tracing-events = {workspace = true, features = ["std"]}

# Substrate
parity-scale-codec = {workspace = true, features = ["std"]}
sp-std = {workspace = true, features = ["std"]}
sp-runtime = {workspace = true, features = ["std"]}
