[package]
name = "pallet-benchmark-dummy"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
hex-literal = { version = "1", default-features = false}
frame-benchmarking = {workspace = true, optional = true}
frame-support = {workspace = true}
frame-system = {workspace = true}
pallet-evm = {workspace = true}
parity-scale-codec = {workspace = true}
scale-info = {workspace = true}
sp-core = {workspace = true}

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }
pallet-balances = {workspace = true }
pallet-timestamp = {workspace = true }
sp-runtime = {workspace = true}
sp-std = {workspace = true}

[features]
default = [ "std" ]
std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-evm/std",
	"pallet-timestamp/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-evm/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
]

[package.metadata.cargo-machete]
ignored = ["parity-scale-codec", "scale-info"]
