[package]
name = "pallet-deployment-permissions"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
frame-benchmarking = {workspace = true, optional = true}
frame-support = {workspace = true}
frame-system = {workspace = true}
pallet-evm = {workspace = true}
parity-scale-codec = {workspace = true}
scale-info = {workspace = true}
sp-core = {workspace = true}

[dev-dependencies]
sp-core = {workspace = true, default-features = true}
sp-io = {workspace = true, default-features = true}
sp-runtime = {workspace = true, default-features = true}

[features]
default = [ "std" ]
std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-core/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-evm/try-runtime",
	"sp-runtime/try-runtime",
]

[package.metadata.cargo-machete]
ignored = ["parity-scale-codec", "scale-info"]
