[package]
name = "pallet-deployment-permissions"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
frame-benchmarking = {workspace = true, optional = true}
frame-support = {workspace = true}
frame-system = {workspace = true}
pallet-evm = {workspace = true}
parity-scale-codec = {workspace = true}
scale-info = {workspace = true}
sp-core = {workspace = true}
fp-evm = {workspace = true}

[dev-dependencies]
educe = { version = "0.6.0"}
mockall = {version = "0.13.1"}
pallet-balances = {workspace = true, default-features = true}
pallet-ethereum = {workspace = true, default-features = true}
pallet-timestamp = {workspace = true, default-features = true}
sp-core = {workspace = true, default-features = true}
sp-io = {workspace = true, default-features = true}
sp-runtime = {workspace = true, default-features = true}

[features]
default = [ "std" ]
std = [
	"fp-evm/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-core/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-ethereum/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-ethereum/try-runtime",
	"pallet-evm/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
]

[package.metadata.cargo-machete]
ignored = ["parity-scale-codec", "scale-info"]
