[package]
name = "pallet-network-type"
version = "0.1.0"
description = "Pallet for getting Network Type"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "GPL-3.0-only"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = {workspace = true, features = ["derive"]}
scale-info = {workspace = true, features = ["derive"]}
serde = {workspace = true}
# Substrate
frame-support = {workspace = true}
frame-system = {workspace = true}

[features]
default = [ "std" ]
std = [
	# Substrate
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
]
try-runtime = [ "frame-support/try-runtime", "frame-system/try-runtime" ]

[package.metadata.cargo-machete]
ignored = ["parity-scale-codec", "scale-info"]
