[package]
name = "zkv-para-evm-primitives-ext"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"

[dependencies]
ethereum-types = { workspace = true }

# Local
evm-tracing-events = { workspace = true }

# Substrate
parity-scale-codec = { workspace = true }
sp-externalities = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"ethereum-types/std",
	"evm-tracing-events/std",
	"parity-scale-codec/std",
	"sp-externalities/std",
	"sp-runtime-interface/std",
	"sp-std/std",
]
