[package]
name = "zkv-para-evm-primitives-ext"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"

[dependencies]

# Local
evm-tracing-events = {workspace = true}

# Substrate
parity-scale-codec = {workspace = true}
sp-runtime-interface = {workspace = true}
sp-std = {workspace = true}

[features]
default = [ "std" ]
std = [
	"evm-tracing-events/std",
	"parity-scale-codec/std",
	"sp-runtime-interface/std",
	"sp-std/std",
]
