[package]
name = "zkv-para-evm-evm-tracer"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0"

[dependencies]

# Local
evm-tracing-events = {workspace = true, features = ["evm-tracing"]}
zkv-para-evm-primitives-ext = {workspace = true}

# Substrate
parity-scale-codec = {workspace = true}
sp-std = {workspace = true}

# Frontier
evm = {workspace = true}
evm-gasometer = {workspace = true}
evm-runtime = {workspace = true}

[features]
default = [ "std" ]
std = [
	"evm-gasometer/std",
	"evm-runtime/std",
	"evm-tracing-events/std",
	"evm/std",
	"evm/with-serde",
	"parity-scale-codec/std",
	"sp-std/std",
	"zkv-para-evm-primitives-ext/std",
]
