[package]
name = "zkv-para-evm-rpc-core-debug"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "GPL-3.0-only"

[dependencies]
ethereum-types = { workspace = true, features = ["std"] }
futures = { workspace = true, features = ["compat"] }
jsonrpsee = { workspace = true, features = ["macros", "server"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Local
zkv-para-evm-client-evm-tracing = { workspace = true }
zkv-para-evm-rpc-core-types = { workspace = true }

# Substrate
sp-core = { workspace = true, features = ["std"] }
