[package]
name = "zkv-para-evm-rpc-core-debug"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "GPL-3.0-only"

[dependencies]
ethereum-types = {workspace = true, features = ["std"]}
jsonrpsee = {workspace = true, features = ["macros", "server"]}

serde = {workspace = true, features = ["derive"]}

# Local
zkv-para-evm-client-evm-tracing = {workspace = true}
zkv-para-evm-rpc-core-types = {workspace = true}
