[package]
name = "zkv-para-evm-rpc-core-types"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "GPL-3.0-only"

[dependencies]
ethereum-types = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
