[package]
name = "zkv-para-evm-rpc-primitives-debug"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license = "GPL-3.0-only"

[dependencies]
ethereum = {workspace = true}
ethereum-types = {workspace = true}

# Substrate
parity-scale-codec = {workspace = true}
sp-api = {workspace = true}
sp-runtime = {workspace = true}
sp-std = {workspace = true}

[features]
default = [ "std" ]
std = [
	"ethereum-types/std",
	"ethereum/std",
	"parity-scale-codec/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
]
